<resources>
    <string name="app_name">Serial Bridge</string>
    <string name="port_number_label">Port number</string>
    <string name="network_parameters">Network Parameters</string>
    <string name="protocol_tcp">TCP</string>
    <string name="protocol_udp">UDP</string>
    <string name="default_port_number">32000</string>
    <string name="ip_address_label">IP Address</string>
    <string name="usb_device_label">USB Device</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
</resources>