<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".BridgingActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/network_parameters_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/network_parameters" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/network_parameters_header">
        <com.google.android.material.button.MaterialButtonToggleGroup
            app:singleSelection="true"
            android:id="@+id/protocol_selection"
            app:checkedButton="@id/button_tcp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_tcp"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protocol_tcp" />

            <Button
                android:id="@+id/button_udp"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/protocol_udp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/port_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/port_number_label">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:text="@string/default_port_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</RelativeLayout>